Fixed overflow issues

--- a/src/styles/layout/_section.scss
+++ b/src/styles/layout/_section.scss
@@ -14,10 +14,10 @@
   }
 
   .symbol--left {
-    left: -310px;
+    right: 0;
   }
   .symbol--right {
-    right: -310px;
+    left: 0;
   }
 
   &--wo {
